// Copyright 2024 MaidSafe.net limited.
//
// This SAFE Network Software is licensed to you under The General Public License (GPL), version 3.
// Unless required by applicable law or agreed to in writing, the SAFE Network Software distributed
// under the GPL Licence is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied. Please review the Licences for the specific language governing
// permissions and limitations relating to use of the SAFE Network Software.

// Protocol buffer for antctld. This is used to control nodes started by antctl.

// Version of protocol buffer used
syntax = "proto3";

// Package name
package antctl_proto;

import "req_resp_types.proto";

service AntCtl {
  // Restart a running antnode service.
  rpc RestartNodeService (NodeServiceRestartRequest) returns (NodeServiceRestartResponse);

  // Get the status of the nodes managed by the Daemon
  rpc GetStatus (GetStatusRequest) returns (GetStatusResponse);
}
